Avoid overflow when album name is very long

--- a/webui/css/tiles/QueueTile.css
+++ b/webui/css/tiles/QueueTile.css
@@ -32,6 +32,7 @@
 {
     margin-left:    1em;
     min-width:      0;      /*Allow shrinking for long titles*/
+    overflow:       hidden;
 }
 .QueueTile span + span
 {
